--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<app-sidenav></app-sidenav>
+<app-sidenav class="fixed z-10"></app-sidenav>
 
-<div class="absolute mt-[5rem] pl-[16rem] pt-[2rem] w-full h-[calc(100vh-5rem)] bg-slate-50">
+<div class="absolute mt-[5rem] pl-0 lg:pl-[16rem] pt-[2rem] w-full h-[calc(100vh-5rem)] bg-slate-50">
   <router-outlet></router-outlet>
 </div>
