--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,26 +1,16 @@
-<div class="md:hidden fixed inset-0 bg-black/50 backdrop-blur-sm" *ngIf="isMenuOpen" (click)="toggleMenu()"></div>
-<div class="absolute w-[80%] lg:ms-[30%] xl:ms-[18rem]">
-  <nav class="container md:flex md:justify-between md:items-center m-auto">
+<div class="absolute w-full lg:w-[80%] lg:ms-[30%] xl:ms-[18rem] p-4 lg:p-0">
+  <nav class="container flex justify-end md:justify-between md:items-center m-auto">
     <div class="flex items-center justify-between p-4 gap-12 text-lg text-blue-950">
 
-      <button class="sm:block md:hidden lg:hidden outline-none" (click)="toggleMenu()">
-        <i class="transition-all" [ngClass]="
-                isMenuOpen
-                  ? 'fa-solid fa-xmark fa-2xl'
-                  : 'fa-solid fa-bars fa-lg'
-              "></i>
-      </button>
-
-      <div class="flex items-center gap-1 justify-center bg-gray-100 rounded-lg px-4 py-2">
+      <div class="hidden lg:flex  items-center gap-1 justify-center bg-gray-100 rounded-lg px-4 py-2">
         <i class="fa-solid fa-magnifying-glass fa-sm text-gray-300"></i>
-        <input type="search"
-          class="hidden md:block lg:block bg-none outline-none rounded-lg px-4 bg-gray-100 lg:w-[20rem] xl:w-[40rem]"
+        <input type="search" class="bg-none outline-none rounded-lg px-4 bg-gray-100 lg:w-[20rem] xl:w-[40rem]"
           placeholder="Search" />
       </div>
 
     </div>
 
-    <div class="hidden lg:flex lg:gap-3 lg:me-4">
+    <div class="flex gap-3 lg:me-4">
       <button class="bg-slate-200 hover:bg-slate-300 w-10 h-10 rounded-lg">
         <i class="fa-solid fa-message-lines fa-lg text-gray-400"></i>
       </button>
