--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -36,7 +36,7 @@
         <i class="ms-3 fa-solid fa-arrow-right"></i></a>
     </div>
 
-    <div class="w-full overflow-scroll bg-white rounded-lg shadow-md">
+    <div class="w-full overflow-y-hidden bg-white rounded-lg shadow-md mb-20">
       <table class="w-[calc(100%-1.5rem)] m-3">
         <thead>
           <tr class="bg-slate-100 rounded-2xl">
